--- a/css/day02quiz02.css
+++ b/css/day02quiz02.css
@@ -1,11 +1,11 @@
-#main{
+#main {
     border: 1px solid black;
     width: 200px;
     height: 800px;
     margin: 10px auto;
 }
 
-#main>h1{
+#main>h1 {
     width: 150px;
     height: 150px;
     border-radius: 75px;
@@ -13,16 +13,16 @@
     margin: 10px auto;
 }
 
-#main>h1>img:hover{
+#main>h1>img:hover {
     transform: scale(1.1);
     transition: all 0.1s;
 }
 
-#main>hr{
+#main>hr {
     width: 75%;
 }
 
-#main>div{
+#main>div {
     border: 1px solid black;
     width: 150px;
     height: 570px;
@@ -30,7 +30,7 @@
     margin: 10px auto;
 }
 
-#main>div>:nth-child(1){
+#main>div>:nth-child(1) {
     border: 1px solid black;
     width: 150px;
     height: 200px;
@@ -38,34 +38,34 @@
     overflow: hidden;
 }
 
-#main>div>:nth-child(1)>img:hover{
+#main>div>:nth-child(1)>img:hover {
     transform: scale(1.1);
     transition: all 0.1s;
 }
 
-#main>div>:nth-child(2){
+#main>div>:nth-child(2) {
     width: 150px;
     height: 330px;
 }
 
 
-#main>div>:nth-child(2)>a{
+#main>div>:nth-child(2)>a {
     color: black;
     text-decoration: none;
 }
 
-#main>div>:nth-child(2)>a:hover{
+#main>div>:nth-child(2)>a:hover {
     color: red;
 }
 
-#main>div>:nth-child(3){
+#main>div>:nth-child(3) {
     width: 150px;
     height: 25px;
     color: blue;
     text-align: right;
 }
 
-#main>button{
+/* #main>button{
     border: 1px solid black;
     width: 40%;
     height: 30px;
@@ -79,6 +79,25 @@
 }
 
 #main>button:hover{
+    border: none;
+    background-color: red;
+    color: white;
+} */
+
+#main>input {
+    border: 1px solid black;
+    width: 40%;
+    height: 30px;
+    background-color: gray;
+    border-radius: 15px;
+    color: white;
+    margin-left: 26px;
+    margin-top: 0px;
+    position: relative;
+    top: -5px;
+}
+
+#main>input:hover {
     border: none;
     background-color: red;
     color: white;
