--- a/project/project.css
+++ b/project/project.css
@@ -12,7 +12,7 @@ header {
 main {
     border: 1px solid black;
     width: 100%;
-    height: 800px;
+    height: 900px;
 }
 
 footer {
@@ -154,7 +154,20 @@ div:nth-of-type(2) {
     &>:nth-child(3) {
         width: 40%;
         height: 100%;
-        background: black;
+
+        &>div:nth-child(1){
+            margin: 0px auto;
+            width: 80%;
+            height: 50%;
+            background: blue
+        }
+
+        &>div:nth-child(2){
+            margin: 0px auto;
+            width: 80%;
+            height: 50%;
+            background: green
+        }
     }
 }
 
