--- a/webproject/project.css
+++ b/webproject/project.css
@@ -5,16 +5,19 @@
 }
 
 header {
+    margin: 0 auto;
     width: 1500px;
     height: 200px;
 }
 
 main {
+    margin: 0 auto;
     width: 1500px;
     height: 900px;
 }
 
 footer {
+    margin: 0 auto;
     width: 1500px;
     height: 50px;
     text-align: center;
@@ -108,6 +111,7 @@ main>div:nth-of-type(1) {
             text-align: center;
 
             &>img {
+                position: relative;
                 width: 100%;
                 height: 100%;
             }
@@ -125,19 +129,21 @@ main>div:nth-of-type(1) {
         width: 40%;
         height: 100%;
         text-align: center;
-            & > img{
-                width: 60%;
-                height: 60%;
-                margin: 0 auto;
-                margin-top: 40px;
-            }
-            & > a{
-                display: inline-block;
-                color: black;
-                font-weight: bold;
-                font-size: 25px;
-                margin-top: 20px;
-            }
+
+        &>img {
+            width: 40%;
+            height: 40%;
+            margin: 0 auto;
+            margin-top: 40px;
+        }
+
+        &>a {
+            display: inline-block;
+            color: black;
+            font-weight: bold;
+            font-size: 25px;
+            margin-top: 20px;
+        }
     }
 
     &>:nth-child(3) {
