--- a/node/day02/quiz01/src/views/member/login.ejs
+++ b/node/day02/quiz01/src/views/member/login.ejs
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <form action="/logincheck" method="get">
+<body align="center">
+    <form action="/member/logincheck" method="get">
         <input type="text" name="id"><br>
         <input type="text" name="name"><br>
         <input type="submit" value="로그인">
