--- a/node/quiz_dbconnect/src/views/member/list.ejs
+++ b/node/quiz_dbconnect/src/views/member/list.ejs
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body align="center">
     <%- include("../default/header") %>
+        <table border="1" align="center">
+            <tr>
+                <th>아이디</th>
+                <th>비밀번호</th>
+                <th>이름</th>
+                <th>주소</th>
+            </tr>
+            <% list.forEach( data=> { %>
+                <tr>
+                    <td>
+                        <%= data.ID %>
+                    </td>
+                    <td>
+                        <%= data.PWD %>
+                    </td>
+                    <td>
+                        <a href="/member/member_view/<%= data.ID %>"><%= data.NAME %></a>
+                    </td>
+                    <td>
+                        <%= data.ADDR %>
+                    </td>
+                </tr>
+                <% }) %>
+        </table>
 </body>
+
 </html>
