--- a/node/quiz_dbconnect/src/views/member/loginform.ejs
+++ b/node/quiz_dbconnect/src/views/member/loginform.ejs
@@ -7,7 +7,7 @@
 </head>
 <body align="center">
     <%- include("../default/header") %>
-    <form action="/member/login" method="post">
+    <form action="/member/login_check" method="post">
         <input type="text" name="id" placeholder="input id"><br>
         <input type="text" name="pwd" placeholder="input password"><br>
         <a href="/member/register_form">회원가입</a>
