--- a/node/quiz_dbconnect/src/views/member/list.ejs
+++ b/node/quiz_dbconnect/src/views/member/list.ejs
@@ -25,7 +25,9 @@
                         <%= data.PWD %>
                     </td>
                     <td>
-                        <a href="/member/member_view/<%= data.ID %>"><%= data.NAME %></a>
+                        <a href="/member/member_view/<%= data.ID %>">
+                            <%= data.NAME %>
+                        </a>
                     </td>
                     <td>
                         <%= data.ADDR %>
