--- a/node/quiz_dbconnect/src/views/member/memberview.ejs
+++ b/node/quiz_dbconnect/src/views/member/memberview.ejs
@@ -11,12 +11,14 @@
     <%- include("../default/header") %>
         <h1>- 개인정보 -</h1><br>
         id : <%= member.ID %><br>
-        pwd : <%= member.PWD %><br>
-        name : <%= member.NAME %><br>
-        addr : <%= member.ADDR %><br>
-        <a href="/member/modify_form?id=<%= member.ID %>">수정</a>
-        <a href="/member/delete/<%= member.ID %>">삭제</a>
-        <a href="/member/list">목록으로 이동</a>
+            pwd : <%= member.PWD %><br>
+                name : <%= member.NAME %><br>
+                    addr : <%= member.ADDR %><br>
+                        <% if (username==member.ID) { %>
+                            <a href="/member/modify_form?id=<%= member.ID %>">수정</a>
+                            <a href="/member/delete/<%= member.ID %>">삭제</a>
+                            <% } %>
+                                <a href="/member/list">목록으로 이동</a>
 </body>
 
 </html>
