--- a/node/quiz_dbconnect/src/views/member/modifyform.ejs
+++ b/node/quiz_dbconnect/src/views/member/modifyform.ejs
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body align="center">
     <%- include("../default/header") %>
-    <form action="/member/modify" method="post">
-        <input type="text" readonly name="id" value="<%= member.ID %>"><br>
-        <input type="text" name="pwd" value="<%= member.PWD %>"><br>
-        <input type="text" name="name" value="<%= member.NAME %>"><br>
-        <input type="text" name="addr" value="<%= member.ADDR %>"><br>
-        <button type="submit">수정</button>
-    </form>
+        <form action="/member/modify" method="post">
+            <input type="text" readonly name="id" value="<%= member.ID %>"><br>
+            <input type="password" name="pwd" value="<%= member.PWD %>"><br>
+            <input type="text" name="name" value="<%= member.NAME %>"><br>
+            <input type="text" name="addr" value="<%= member.ADDR %>"><br>
+            <button type="submit">수정</button>
+        </form>
 
 </body>
+
 </html>
