--- a/node/quiz_dbconnect/src/views/member/registerform.ejs
+++ b/node/quiz_dbconnect/src/views/member/registerform.ejs
@@ -11,7 +11,7 @@
     <%- include("../default/header") %>
         <form action="/member/register" method="post">
             <input type="text" name="id" placeholder="input id"><br>
-            <input type="text" name="pwd" placeholder="input password"><br>
+            <input type="password" name="pwd" placeholder="input password"><br>
             <input type="text" name="name" placeholder="input name"><br>
             <input type="text" name="addr" placeholder="input address"><br>
             <button type="submit">register</button>
