--- a/nodeproject/project.css
+++ b/nodeproject/project.css
@@ -149,7 +149,7 @@ main>div:nth-of-type(1) {
     &>:nth-child(3) {
         width: 20%;
         height: 100%;
-        background: yellow;
+        overflow: auto;
     }
 }
 
