--- a/node/all/src/views/board/list.ejs
+++ b/node/all/src/views/board/list.ejs
@@ -65,7 +65,7 @@
                                                 <% } %>
                                                     <% if ( start < page) { %>
                                                         <button
-                                                            onclick="location.href='/board/list?start=<%= start+1%>'"></button>
+                                                            onclick="location.href='/board/list?start=<%= start+1%>'">다음</button>
                                                         <% } %>
                                                             <a href="/board/write_form">글 작성</a>
                                 </td>
